<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniversePoint</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="createTeam">Edit Team Rosters</string>
    <string name="title_activity_new_game_menu">NewGameMenu</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="filler">Fill</string>
    <string name="addPoint">Add Point</string>
    <string name="addTurn">Add Turn</string>
    <string name="finishGame">Finish Game</string>
    <string name="removePoint">Remove Point</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score_summary">ScoreSummary</string>
    <string name="team1Score">0</string>
    <string name="team2Score">0</string>
    <string name="teamNameHeader">Team</string>
    <string name="teamScoreHeader">Score</string>
    <string name="teamTurnsHeader">Turnovers</string>
    <string name="team1Turns">N/A</string>
    <string name="team2Turns">N/A</string>
    <string name="mainMenu">Main Menu</string>
    <string name="removeError">Cannot go below 0</string>
    <string name="scoreLoadError">Error retrieving game data</string>
    <string name="removeTurn">Remove Turn</string>
    <string name="viewGames">View/Edit Past Games</string>
    <string name="noTeams">No teams here.  Use settings menu to add a team.</string>
    <string name="addNewTeam">Add Team</string>
    <string name="removeTeam">Delete Team</string>
    <string name="title_activity_edit_teams">Edit Teams</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nameNotNullToastMessage">Name cannot be empty, the save did not occur.</string>

</resources>
