<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ScoreSummary" >

    <LinearLayout android:id="@+id/boxScore"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout android:id="@+id/teamNames"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/teamNameHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:textSize="@dimen/textHeaderSize"
                android:textStyle="bold"
                android:text="@string/teamNameHeader" />

            <TextView
                android:id="@+id/box_team1Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:text="@string/team1" />

            <TextView
                android:id="@+id/box_team2Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team2" />
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/teamScore"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/teamScoreHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:textSize="@dimen/textHeaderSize"
                android:textStyle="bold"
                android:text="@string/teamScoreHeader" />

            <TextView
                android:id="@+id/box_team1Score"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:layout_height="wrap_content"
                android:text="@string/team1Score" />

            <TextView
                android:id="@+id/box_team2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team2Score" />
            
        </LinearLayout>
        
        <LinearLayout android:id="@+id/teamTurns"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/teamTurnsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:textSize="@dimen/textHeaderSize"
                android:textStyle="bold"
                android:text="@string/teamTurnsHeader" />

            <TextView
                android:id="@+id/box_team1Turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/buttonVerticalMargin"
                android:text="@string/team1Turns" />

            <TextView
                android:id="@+id/box_team2Turns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team2Turns" />
            
        </LinearLayout>

    </LinearLayout>

    <LinearLayout android:id="@+id/selectionButtons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/newgame" />

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/mainMenu" />
        
    </LinearLayout>

</LinearLayout>
