<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGame" >
	
    <LinearLayout android:id="@+id/Team1Layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp">
        
        <EditText android:id="@+id/team1Name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/team1" />

        <TextView android:id="@+id/team1Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/scoreSize"
            android:text="@string/filler" />

    </LinearLayout>
    
    <LinearLayout android:id="@+id/Team2Layout"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp">
        
        <EditText android:id="@+id/team2Name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/team2"/>

        <TextView android:id="@+id/team2Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/scoreSize"
            android:text="@string/filler" />

    </LinearLayout>

</LinearLayout>
